# cmake_fiddling

./: .clang-format  CMakeLists.txt
cmake/: assert.cmake  code_tests.cmake
cmake/tests/: CMakeLists.txt
cmake/tests/test_assert/: CMakeLists.txt  test_assert_false.cmake  test_assert_true.cmake
cmake/tests/test_code_test/: CMakeLists.txt
cmake/tests/test_code_tests/: CMakeLists.txt
cmake/tests/test_code_tests/test_install_components/: CMakeLists.txt
cmake/tests/test_code_tests/test_install_components/test_installed_component_adds_install_and_remove_tests/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/examples/: CMakeLists.txt
sdk/examples/example_one/: CMakeLists.txt
sdk/examples/example_two/: CMakeLists.txt
sdk/include/sdk/: sdk.h
